SONAR-7844 persist scanner context in DB instead of logging it